--- a/bower.json
+++ b/bower.json
@@ -8,9 +8,10 @@
   ],
   "dependencies": {
     "angular": "1.4.6",
-    "angular-ui-router": "0.2.15",
     "angular-bootstrap": "0.13.4",
+    "angular-chart.js": "~0.8.4",
     "angular-resource": "1.4.6",
+    "angular-ui-router": "0.2.15",
     "requirejs": "2.1.20",
     "requirejs-domready": "2.0.1"
   }
