--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "angular": "1.4.6",
     "angular-bootstrap": "0.13.4",
     "angular-chart.js": "~0.8.4",
+    "angular-google-maps": "~2.2.1",
     "angular-resource": "1.4.6",
     "angular-ui-router": "0.2.15",
     "requirejs": "2.1.20",
